[gd_scene load_steps=31 format=3 uid="uid://c2db1rw6borur"]

[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="1_0ey4p"]
[ext_resource type="Script" uid="uid://feql74pw4kam" path="res://Scripts/WorldView/world_view_questionair.gd" id="2_wn0u1"]
[ext_resource type="Script" uid="uid://cpsu3uuo3rqxr" path="res://Scripts/WorldView/WorldviewQuestion.gd" id="3_5vy1l"]
[ext_resource type="Resource" uid="uid://b14pf60c6owon" path="res://Resources/Worldview/Questions/ComposureAgitation/Question1.tres" id="4_0jjjo"]
[ext_resource type="Resource" uid="uid://imhmel7yejn2" path="res://Resources/Worldview/Questions/ComposureAgitation/Question5.tres" id="5_0ey4p"]
[ext_resource type="Resource" uid="uid://jfvfthb8ap5o" path="res://Resources/Worldview/Questions/ComposureAgitation/Question9.tres" id="6_mkbl6"]
[ext_resource type="Resource" uid="uid://brhdbbo02p4l" path="res://Resources/Worldview/Questions/ComposureAgitation/Question10.tres" id="7_gij2h"]
[ext_resource type="Resource" uid="uid://r7p5hp8lxqip" path="res://Resources/Worldview/Questions/ComposureAgitation/Question11.tres" id="8_6xjrs"]
[ext_resource type="Resource" uid="uid://celoydn1kc28e" path="res://Resources/Worldview/Questions/ComposureAgitation/Question12.tres" id="9_cphet"]
[ext_resource type="Resource" uid="uid://c20jv2v1r7jga" path="res://Resources/Worldview/Questions/EmpathyEgo/Question1.tres" id="10_dx0y0"]
[ext_resource type="Resource" uid="uid://dsou1hxtj3bc6" path="res://Resources/Worldview/Questions/EmpathyEgo/Question2.tres" id="11_1cuev"]
[ext_resource type="Resource" uid="uid://ggthjj4qjboo" path="res://Resources/Worldview/Questions/EmpathyEgo/Question3.tres" id="12_yejad"]
[ext_resource type="Resource" uid="uid://gb2154dsiv47" path="res://Resources/Worldview/Questions/LogivBelief/Question7.tres" id="13_ss02x"]
[ext_resource type="Resource" uid="uid://64dfulxy6ods" path="res://Resources/Worldview/Questions/EmpathyEgo/Question11.tres" id="14_6iaxw"]
[ext_resource type="Resource" uid="uid://lebcdjjo5w8d" path="res://Resources/Worldview/Questions/EmpathyEgo/Question12.tres" id="15_e18fm"]
[ext_resource type="Resource" uid="uid://bam7qeec6la4g" path="res://Resources/Worldview/Questions/ForceInspiration/Question4.tres" id="16_jtjw7"]
[ext_resource type="Resource" uid="uid://bqbpuwy4bgjdv" path="res://Resources/Worldview/Questions/ForceInspiration/Question8.tres" id="17_dymyh"]
[ext_resource type="Resource" uid="uid://ciec4otx2rv03" path="res://Resources/Worldview/Questions/ForceInspiration/Question12.tres" id="18_ucmj5"]
[ext_resource type="Resource" uid="uid://btbe6q2hdw557" path="res://Resources/Worldview/Questions/ForceInspiration/Question13.tres" id="19_8f5b7"]
[ext_resource type="Resource" uid="uid://dye1exg1a32qv" path="res://Resources/Worldview/Questions/ForceInspiration/Question14.tres" id="20_s1878"]
[ext_resource type="Resource" uid="uid://dvlh7ox6eyjp" path="res://Resources/Worldview/Questions/ForceInspiration/Question15.tres" id="21_fmooa"]
[ext_resource type="Resource" uid="uid://b4gpfuksjs2ds" path="res://Resources/Worldview/Questions/LogivBelief/Question2.tres" id="22_a01bo"]
[ext_resource type="Resource" uid="uid://b7g2e26vk8708" path="res://Resources/Worldview/Questions/LogivBelief/Question6.tres" id="23_l0coj"]
[ext_resource type="Resource" uid="uid://wkltvw7eqq05" path="res://Resources/Worldview/Questions/LogivBelief/Question10.tres" id="24_ra63j"]
[ext_resource type="Resource" uid="uid://ch8eh8he57gip" path="res://Resources/Worldview/Questions/LogivBelief/Question13.tres" id="25_3hoxt"]
[ext_resource type="Resource" uid="uid://dmfaobxfl2bks" path="res://Resources/Worldview/Questions/LogivBelief/Question14.tres" id="26_vfqru"]
[ext_resource type="Resource" uid="uid://dnuaid5mx6umc" path="res://Resources/Worldview/Questions/LogivBelief/Question15.tres" id="27_fl7up"]
[ext_resource type="PackedScene" uid="uid://dp5ghsxs3xitl" path="res://Scenes/Dialogue/linetest.tscn" id="28_0jjjo"]
[ext_resource type="AudioStream" uid="uid://bmcuncv0xwe2k" path="res://Assets/Sounds/TextSound.mp3" id="29_0ey4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ey4p"]

[node name="WorldViewQuestionair" type="PanelContainer" node_paths=PackedStringArray("Text")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_0ey4p")
script = ExtResource("2_wn0u1")
Text = NodePath("VBoxContainer/Label")
IntroDialogue = Array[String]([".................................", ".................................................", "Where am I ?", "A voice cuts through the void, calming yet authoritative—likely female.", "\"Steady your breath, pilot. This may cause some discomfort, but I assure you, it’s temporary.\"", "Her words linger, drawing fragments of reality back to you.", " \"As you know, the pilot initiation program is mandatory for all aspiring pilots. Your time has come to undertake this test.\"", "Clarity returns. You had prepared for this moment, expecting a written exam. Yet, something feels different.", "Her voice, clear and resonant, continues.", "\"You're likely curious about your current situation. Rest assured, it's all precautionary, tailored to gather the data we need.\"", "\"Your physiological readings are carefully monitored. You'll be released shortly after the test concludes.\"", "\"We've curated a selection of 12 questions to serve as your evaluation. Stay calm and respond as thoroughly as possible. The screen will display them shortly.\"", "Your heart rate quickens. Can something so simple stand as a barrier to the duty you've committed to? You chose this war for reasons beyond yourself. Would they truly deny you this chance to honor that choice?", "\"Remember, pilot, you will hold the lives of your comrades in your hands. This is a matter of gravity. While I empathize with your anxieties, the role of a pilot is earned, not given.\"", "She ......", "INITIALISING TEST"])
PossibleQuestions = Array[ExtResource("3_5vy1l")]([ExtResource("4_0jjjo"), ExtResource("5_0ey4p"), ExtResource("6_mkbl6"), ExtResource("7_gij2h"), ExtResource("8_6xjrs"), ExtResource("9_cphet"), ExtResource("10_dx0y0"), ExtResource("11_1cuev"), ExtResource("12_yejad"), ExtResource("13_ss02x"), ExtResource("14_6iaxw"), ExtResource("15_e18fm"), ExtResource("16_jtjw7"), ExtResource("17_dymyh"), ExtResource("18_ucmj5"), ExtResource("19_8f5b7"), ExtResource("20_s1878"), ExtResource("21_fmooa"), ExtResource("22_a01bo"), ExtResource("23_l0coj"), ExtResource("24_ra63j"), ExtResource("25_3hoxt"), ExtResource("26_vfqru"), ExtResource("27_fl7up")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "wafwafwafwafwafawafwafwa
fwafwa
faw
faw"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
visible_characters_behavior = 1

[node name="LineDrawer" parent="VBoxContainer" instance=ExtResource("28_0jjjo")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_0ey4p")
OrientationUpDown = false
waveform_points = 10
sample_rate = 2700
buffer_size = 471
phase = inf

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer" groups=["DigitalButtons"]]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Option1"
autowrap_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer" groups=["DigitalButtons"]]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Option 2"
autowrap_mode = 2

[node name="HBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2" groups=["DigitalButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Next"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer2" groups=["DigitalButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Skip"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_0ey4p")
volume_db = -5.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="Option1Pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="Option2Pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button" to="." method="NextButtonPressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button2" to="." method="SkipButton"]
